--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,24 @@
 /*  your css code here. If applicable */
+#main_container{
+	border:2px solid black;
+	padding:10px;
+	border-radius:9px;
+	height:300px;
+	align-items:center;
+}
+
         #verification_heading {
+			 display: flex;
+            justify-content: center;
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 10px;
         }
 
         #verification_subtext {
+			 display: flex;
+            justify-content: center;
+			align-items:center;
             font-size: 16px;
             color: #555;
             margin-bottom: 20px;
@@ -14,15 +27,16 @@
         .code-container {
             display: flex;
             justify-content: center;
-            gap: 10px;
-            margin-top: 20px;
+			align-items:center;
+            gap: 12px;
+            margin-top: 40px;
         }
 
         .code {
-            width: 40px;
-            height: 40px;
+            width: 60px;
+            height: 80px;
             text-align: center;
-            font-size: 18px;
+            font-size: 48px;
             border: 1px solid #ccc;
             border-radius: 5px;
             outline: none;
